hphp/test/zend/bad/ext/curl/tests/curl_multi_close_basic.php
<?php
$ch = curl_multi_init();
curl_multi_close($ch);
var_dump($ch);
?>
===DONE===